Archive2/15/2ea4d4f7d60f1d/output
main.cpp: In function 'int main()':
main.cpp:8:25: error: 'begin' was not declared in this scope
     for (const int &i : 5) // access by const reference
                         ^
main.cpp:8:25: note: suggested alternative:
In file included from /usr/local/include/c++/4.9.0/bits/basic_string.h:42:0,
                 from /usr/local/include/c++/4.9.0/string:52,
                 from /usr/local/include/c++/4.9.0/bits/locale_classes.h:40,
                 from /usr/local/include/c++/4.9.0/bits/ios_base.h:41,
                 from /usr/local/include/c++/4.9.0/ios:42,
                 from /usr/local/include/c++/4.9.0/ostream:38,
                 from /usr/local/include/c++/4.9.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/initializer_list:89:5: note:   'std::begin'
     begin(initializer_list<_Tp> __ils) noexcept
     ^
main.cpp:8:25: error: 'end' was not declared in this scope
     for (const int &i : 5) // access by const reference
                         ^
main.cpp:8:25: note: suggested alternative:
In file included from /usr/local/include/c++/4.9.0/bits/basic_string.h:42:0,
                 from /usr/local/include/c++/4.9.0/string:52,
                 from /usr/local/include/c++/4.9.0/bits/locale_classes.h:40,
                 from /usr/local/include/c++/4.9.0/bits/ios_base.h:41,
                 from /usr/local/include/c++/4.9.0/ios:42,
                 from /usr/local/include/c++/4.9.0/ostream:38,
                 from /usr/local/include/c++/4.9.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/initializer_list:99:5: note:   'std::end'
     end(initializer_list<_Tp> __ils) noexcept
     ^
